Bug #11092: Connection status message are displayed in incorrect order Bug #11128: Reregister doesn't disconnect the user ice from the server Bug #11129: Delete User popup message is not visible

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3873,9 +3873,10 @@ select[multiple]:-internal-list-box option:checked {
 #samlCertValue {
     margin-top: 5px;
     width: calc(100% - 130px);
-    height: 175px;
+    height: 150px;
     font-size: 12px;
     resize: none;
+    float: right;
 }
 
 .sessionItemWrap {
